<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.movieDetails.MovieDetailsActivity">

    <ImageView
        android:id="@+id/movieImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_two_hundred_dp"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="@dimen/common_zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/common_ten_dp"
        android:textColor="@color/gray_tundora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movieImage"
        tools:text="6 March 2018" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/favouriteImage"
        android:layout_width="@dimen/common_zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_four_dp"
        android:layout_marginEnd="@dimen/common_twenty_dp"
        android:background="@drawable/ic_icon_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBarWidget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateTitle" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingBarWidget"
        style="@style/AppTheme.Rating.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/dateTitle"
        app:layout_constraintTop_toBottomOf="@id/dateTitle"
        android:rating="3.5" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBarWidget">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/purple_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingBarWidget"
                android:text="@string/movie_rama_description" />

            <TextView
                android:id="@+id/character_comics_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textColor="?colorOnBackground"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieDescription"
                tools:text="When the island's dormant volcano begins roaring to life, Owen and Claire mount a campaign to rescue the remaining dinosaurs from this extinction-level event" />

            <TextView
                android:id="@+id/movieDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="@dimen/common_ten_dp"
                android:textColor="@color/purple_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_comics_title"
                android:text="@string/movie_rama_director" />

            <TextView
                android:id="@+id/movieDirectorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textColor="?colorOnBackground"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieDirector"
                tools:text="J.A. Bayona" />

            <TextView
                android:id="@+id/movieCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="@dimen/common_ten_dp"
                android:textColor="@color/purple_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieDirectorName"
                android:text="@string/movie_rama_cast" />

            <TextView
                android:id="@+id/movieCastNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textColor="?colorOnBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieCast"
                tools:text="Chris Pratt, Bryce Dallas Howard, Rafe Spall" />

            <TextView
                android:id="@+id/similarMoviesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/purple_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieCastNames"
                android:text="@string/movie_rama_similar_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similarMoviesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_comics_title"
                tools:itemCount="5"
                tools:listitem="@layout/row_similar_movie" />

            <TextView
                android:id="@+id/reviewsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/purple_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/similarMoviesRecyclerView"
                android:text="@string/movie_rama_reviews" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:clipToPadding="false"
                tools:itemCount="5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviewsTitle"
                tools:listitem="@layout/row_review"/>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@color/transparent"
        android:padding="@dimen/common_zero_dp"
        app:contentInsetEnd="@dimen/common_zero_dp"
        app:contentInsetLeft="@dimen/common_zero_dp"
        app:contentInsetRight="@dimen/common_zero_dp"
        app:contentInsetStart="@dimen/common_zero_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/transparent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButtonImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/common_zero_dp"
            android:layout_marginEnd="@dimen/common_ten_dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>